# fingerprintjs

./: .editorconfig  .eslintignore  .eslintrc  .gitignore  .npmignore  .nvmrc  .prettierrc  .travis.yml  CONTRIBUTING.md  Exp 5.txt  FAQ.md  ISSUE_TEMPLATE.md  LICENSE  OPTIMIZATIONS.md  README.md  README_OPTIMIZATIONS.md  binary.txt  bower.json  code_of_conduct.md  contributing.md  custom-lint.sh  fingerprint2.js  gulpfile.js  hello.txt  index.html  karma.conf.js  karma.conf.ts  karma.config.js  license.txt  main.js  main.js.map  migrating-v2-v3.md  package-lock.json  package.json  params.json  publishing.md  readme.md  rollup.config.js  rollup.config.ts  terser.config.js  (+6 more)
.github/: issue_template.md
bundles/: current.js  fp.js  old.js  rust-wasm.js  rust_wasm.js
docs/: api.md  browser_support.md  bypass_ad_blockers.md  bypass_adblock_detection.md  comparison.md  content_blockers.md  evade_ad_blockers.md  extending.md  licensing.md  migrating_v1_v3.md  migrating_v2_v3.md  publishing.md  typescript_support.md  version_policy.md
examples/: README.md  benchmark-runner.ts  demo.html  optimized-usage.ts
flash/: FontList.as
playground/: index.html  index.ts  tsconfig.json  webpack.config.js  webpack.config.ts
resources/: license_banner.txt
selenium_tests/: incognito.spec.js
specs/: fp2.js  run.sh  spec_runner.html  specs.js  test_runner.html
src/: agent.test.ts  agent.ts  confidence.test.ts  confidence.ts  confidence_score.test.ts  confidence_score.ts  entry.js  fingerprint.ts  global.d.ts  (+2 more)
wasm-rust/: .gitignore  Cargo.toml  Makefile
wasm-rust/src/: lib.rs
(+259 files in other folders)
