[package]
name = "rust-hash"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
mur3 = "0.1.0"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 's'